update text remove (F1)

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a href="" id="download-plain"><button class="editing-button" onclick="savePlain()" title="save text you have inputed, (ctrl + shift + alt + b)">&#128190; Plain</button></a>
                 <button class="editing-button" onclick="printMe(document.getElementById('preview'))" title="prints the preview, (Alt + q)">🖨️ Print</button>
                 <span class="divider"></span>
-                <button class="editing-button" onclick="preview.innerHTML = convert(textEditor.value, custom=cusotmMdChkbx.checked)" title="(F1)">Convert (F1)</button>
+                <button class="editing-button" onclick="preview.innerHTML = convert(textEditor.value, custom=cusotmMdChkbx.checked)" id="convert-button" title="(Ctrl + Shift + Alt + C)">Convert (Ctrl + Shift + Alt + C)</button>
             </fieldset>
         </div>
         <div id="home" class="bar-section">
