--- a/Update.html
+++ b/Update.html
@@ -125,6 +125,7 @@
 	    <h3 class="fixed">Fixes</h3>
 	    <ul>
 	        <li>Button colors in dark mode being weird</li>
+		<li>Slightly improved auto tab</li>
 	    </ul>
         <h3 class="removed">Removed</h3>
         <ul>
